--- a/app/src/main/res/layout/them_message_recycler_view_row.xml
+++ b/app/src/main/res/layout/them_message_recycler_view_row.xml
@@ -36,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="John Grady Cole"
-        android:textSize="16sp"
+        android:textColor="@color/gray"
+        android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/gc_proifle_pic_iv"
         app:layout_constraintTop_toBottomOf="@+id/gc_date_tv" />
 
@@ -44,7 +45,7 @@
         android:id="@+id/card_gchat_message_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#eef1f6"
+        app:cardBackgroundColor="@color/purple_200"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
