--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -160,8 +160,8 @@
         />
 
 
-    <LinearLayout
-        android:id="@+id/ll_distance"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_distance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -175,25 +175,41 @@
 
     <TextView
         android:id="@+id/max_distance"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:text="@string/max_distance"
         android:textColor="@color/gray"
         android:textStyle="bold" />
-
-    <com.google.android.material.slider.RangeSlider
+    <TextView
+        android:id="@+id/tv_distance"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="0 Miles"
+        android:textColor="@color/gray"
+        android:textStyle="bold"/>
+    <com.google.android.material.slider.RangeSlider
+        android:id="@+id/rs_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/max_distance"
+        app:layout_constraintStart_toStartOf="@id/max_distance"
+        android:stepSize="1"
+        android:valueFrom="0"
+        android:valueTo="100">
 
     </com.google.android.material.slider.RangeSlider>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/tv_deal_breaker"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/ll_distance"
-        app:layout_constraintStart_toStartOf="@id/ll_distance"
+        app:layout_constraintTop_toBottomOf="@id/cl_distance"
+        app:layout_constraintStart_toStartOf="@id/cl_distance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/deal_breaker"
