--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,6 +80,9 @@
             app:exitAnim="@anim/slide_out_to_left"
             app:popEnterAnim="@anim/slide_in_from_left"
             app:popExitAnim="@anim/slide_out_to_right" />
+        <action
+            android:id="@+id/action_otherGroupTabFragment_to_viewGroupInfoFragment"
+            app:destination="@id/viewGroupInfoFragment" />
     </fragment>
     <fragment
         android:id="@+id/initialProfilePersonalizationFragment"
