--- a/app/src/main/res/layout/join_group_guide.xml
+++ b/app/src/main/res/layout/join_group_guide.xml
@@ -21,20 +21,21 @@
 
             <TextView
                 android:id="@+id/user_guide"
-                android:layout_width="247dp"
-                android:layout_height="38dp"
+                android:layout_width="297dp"
+                android:layout_height="43dp"
                 android:gravity="center"
                 android:text="Join a group"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:theme="@style/page_title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.659"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.4" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/btn_user_guide"
+                android:id="@+id/backto_guide_from_join_a_group"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="59dp"
                 android:layout_height="43dp"
@@ -57,5 +58,194 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:background="@color/horizontal_line" />
+
+<!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 1:"
+                android:gravity="center"
+                android:theme="@style/page_heading">
+            </TextView>
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        android:background="@drawable/round_corner">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_foreground"
+            android:contentDescription="placeholder"
+            tools:ignore="HardcodedText" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Navigate to 'My Groups' Tab."
+            >
+        </TextView>
+    </LinearLayout>
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 2:"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/my_groups_add_button"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY" />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Click on the (+) button on the top right corner."
+                >
+            </TextView>
+        </LinearLayout>
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 3:"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="200dp"
+                android:src="@drawable/join_group_dialog"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="centerCrop"
+
+               />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="From the dialog, select 'Join a group'."
+                android:gravity="center_vertical|start"
+                >
+            </TextView>
+        </LinearLayout>
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 4:"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:src="@drawable/enter_group_code"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY"
+
+                />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter in the 'group code' and click on 'Search'.\n\nNote: User must received an invite code to join a group."
+                android:gravity="center_vertical|start"
+                >
+            </TextView>
+
+        </LinearLayout>
+
+
     </LinearLayout>
 </ScrollView>
