Matched groups now display group info upon clicking group pic
Also exit button on viewGroupInfo works as intended

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -199,6 +199,9 @@
         <action
             android:id="@+id/action_viewGroupInfoFragment_to_preferencesFragment"
             app:destination="@id/preferencesFragment" />
+        <action
+            android:id="@+id/action_viewGroupInfoFragment_to_otherGroupTabFragment"
+            app:destination="@id/otherGroupTabFragment" />
     </fragment>
     <fragment
         android:id="@+id/joinGroupFragment"
