Emanuel Update: Updated Preference XML, Fragment and viewModel Updated Nav_graph Preference Fragment Location

--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PreferencesFragment"
+    tools:context=".DiscoveryPreferences.PreferencesFragment"
     >
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
@@ -307,22 +307,24 @@
             android:textColor="@color/gray"
             android:textStyle="bold"/>
         <RadioGroup
+            android:id="@+id/rg_gender"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/rb_male"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Male" />
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/rb_female"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Female" />
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/rb_all"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="All" />
         </RadioGroup>
     </LinearLayout>
