match tab displays group profile picture, interest tag bug fixed, and removed pendingGroups from users

--- a/app/src/main/res/layout/match_group_card.xml
+++ b/app/src/main/res/layout/match_group_card.xml
@@ -79,6 +79,7 @@ used to populate the cardStackView recycler -->
                     </RelativeLayout>
                     <!-- group photo -->
                     <ImageView
+                        android:id="@+id/group_picture"
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:adjustViewBounds="true"
