--- a/app/src/main/res/layout/vote_group_card.xml
+++ b/app/src/main/res/layout/vote_group_card.xml
@@ -3,7 +3,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="200dp"
+    android:layout_height="230dp"
     android:layout_width="match_parent"
     android:layout_margin="7dp"
     app:cardCornerRadius="5dp"
@@ -34,7 +34,7 @@
                 android:layout_height="60dp"
                 android:scaleType="centerCrop"
                 app:civ_border_color="@color/off_white"
-                app:civ_border_width="3dp"
+                app:civ_border_width="4dp"
                 android:layout_centerInParent="true"/>
         </RelativeLayout>
         <!-- name of the pending group -->
@@ -44,40 +44,66 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/karla_extra_bold"
             android:layout_centerInParent="true"
-            android:layout_above="@id/votingPersonIcons"
+            android:layout_above="@id/matchingGroupName"
             android:paddingTop="10dp"
-            android:paddingBottom="4dp"
+            android:paddingBottom="3dp"
             android:textSize="15sp"/>
+        <!-- name of the matching group -->
+        <TextView
+            android:id="@+id/matchingGroupName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/karla"
+            android:layout_centerInParent="true"
+            android:layout_above="@id/votingPersonIcons"
+            android:paddingBottom="5dp"
+            android:textSize="11sp"/>
         <!-- container for the person icons during voting -->
         <LinearLayout
             android:id="@+id/votingPersonIcons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true">
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/member_0"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/person_icon"
-                android:visibility="invisible"/>
-            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                android:paddingHorizontal="1dp"
+                app:civ_border_color="@color/gray"
+                app:civ_border_width="3dp"
+                />
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/member_1"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/person_icon"
-                android:visibility="invisible"/>
-            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                android:paddingHorizontal="1dp"
+                app:civ_border_color="@color/gray"
+                app:civ_border_width="3dp"
+                />
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/member_2"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/person_icon"
-                android:visibility="invisible"/>
-            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                android:paddingHorizontal="1dp"
+                app:civ_border_color="@color/gray"
+                app:civ_border_width="3dp"
+                />
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/member_3"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/person_icon"
-                android:visibility="invisible"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                android:paddingHorizontal="1dp"
+                app:civ_border_color="@color/light_grey"
+                app:civ_border_width="3dp"
+                />
         </LinearLayout>
         <!-- container for the accept and reject button -->
         <RelativeLayout
