--- a/app/src/main/res/layout/dialog_button.xml
+++ b/app/src/main/res/layout/dialog_button.xml
@@ -7,3 +7,9 @@
     android:layout_height="wrap_content"
     android:padding="20dp"
     android:textAlignment="center"/>
+<!--<TextView-->
+<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:id="@+id/horizontal_bar"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="1dp"-->
+<!--android:background="@color/horizontal_line"/>-->
