--- a/app/src/main/res/layout/fragment_user_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_user_profile_tab.xml
@@ -112,4 +112,25 @@
         app:cornerRadius="10dp"
         android:stateListAnimator="@null"/>
 
+    <Button
+        android:id="@+id/about_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/background_text"
+        android:drawableEnd="@drawable/aboutus_btn"
+        android:fontFamily="@font/karla"
+        android:padding="20dp"
+        android:text="About Us"
+        android:textAlignment="viewStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:cornerRadius="10dp"
+        android:stateListAnimator="@null"/>
+
+
+
 </LinearLayout>
